style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
 /* light Mode */
    background-color: #ffffff;
    color: #000000;
    transition: background-color 0.3s, color 0.3s;
  }

  /* Dark Mode */
.dark-mode {
  background-color: #121212;
  color: #ffffff;
}
  header {
    background: #333;
    color: white;
    padding: 1rem;
    text-align: center;
  }
  nav ul {
    list-style: none;
    padding: 0;
  }
  nav ul li {
    display: inline;
    margin: 0 10px;
  }
  nav ul li a {
    color: white;
    text-decoration: none;
  }
  section {
    padding: 2rem;
  }
  .project-card {
    border: 5px solid #ddd;
    padding: 1rem;
    margin: 1rem 0;
  }
 .img-badge {
    width: 30%;  /* Each image takes 30% of the container */
    max-width: 200px; /* Prevents them from getting too big */
    height: auto; /* Keeps aspect ratio */
 }

  footer {
    background: #333;
    color: white;
    text-align: center;
    padding: 1rem 0;
  }
  button {
    padding: 10px 20px;
    margin: 10px;
    border: none;
    cursor: pointer;
    background: #007BFF;
    color: white;
    border-radius: 5px;
  }
  button:hover {
    background: #0056b3;
  }

  /* dark mode button */
#darkModeToggle {
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 10px 20px;
  background-color: #333;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background 0.3s;
}

#darkModeToggle:hover {
  background-color: #555;
}

